--- a/src/styles/components/Banner.module.css
+++ b/src/styles/components/Banner.module.css
@@ -5,7 +5,7 @@
 }
 
 .containerBanner {
-    width: 1440px;
+    max-width: 1440px;
     height: 580px;
     margin: 0 auto;
     background: url("../../../public/img/Banner.png");
