--- a/src/styles/components/Footer.module.css
+++ b/src/styles/components/Footer.module.css
@@ -76,7 +76,7 @@
 }
 
 .smilesBottomUltimaLinhaContainer {
-    width: 1440px;
+    max-width: 1440px;;
     margin: 0 auto;
     display: flex;
     align-items: center;
