--- a/src/styles/components/Footer.module.css
+++ b/src/styles/components/Footer.module.css
@@ -7,7 +7,7 @@
 
 .smilesFooter {
     padding-top: 15px;
-    min-width: 1175px;
+    max-width: 1440px;
     display: block;
     background: white;
     width: 1279px;
