att linha aviao

--- a/src/styles/components/OQueSaoMilhas.module.css
+++ b/src/styles/components/OQueSaoMilhas.module.css
@@ -8,7 +8,7 @@
     max-width: 1440px;
     height: 700px;
     margin: 0 auto;
-    background: var(--secundary-color) url("../../../public/img/LinhaAviao.png");
+    background: var(--secundary-color) url("../../../public/img/LinhaAviao.png") no-repeat;
 }
 
 .textOQueSaoMilhas {
