--- a/src/styles/components/Footer.module.css
+++ b/src/styles/components/Footer.module.css
@@ -6,10 +6,10 @@
 }
 
 .smilesFooter {
-    padding-top: 15px;
+    padding-top: 10px;
     display: block;
     background: white;
-    width: 1279px;
+    width: 1280px;
     margin: 0 auto;
 }
 
@@ -18,6 +18,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 15px;
+
 }
 
 .tabelaLinkFooter {
@@ -25,15 +26,31 @@
     width: 60%;
 }
 
+.tabelaLinkFooterBoxDireita {
+    width: 40%;
+    display: inline-flex;
+    justify-content: flex-end;
+    margin-left: 2.5%;
+    float:right;
+    min-height: 30px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 .smilerFooterLink {
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    
 
-    color: #7C7C7C;
-    font-size: 16px;
+    color: var(--third-color);
+    font-size: 14px;
     font-weight: 300;
     line-height: 19px;
+}
+
+.smilerFooterLinkDireita {
+    display: inline-flex;
+    justify-content: flex-end;
 }
 
 .colunaLinkFooter {
@@ -41,16 +58,24 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 35px;
+    height: 25px;
 
     border-right: 1px solid #ECECEC;
-    padding-right: 25px;
+    padding: 0 12px;
+}
+
+.colunaLinkFooter:last-child{
+    border-right: none;
 }
 
 .colunaLinkAjudaFooter {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: var(--primary-color) !important;
+    font-size: 17.54px;
+    font-weight: 500;
+    text-decoration: underline;
 }
 
 .smilesFooterIconsBallon img {
@@ -75,7 +100,7 @@
 }
 
 .smilesBottomUltimaLinhaContainer {
-    max-width: 1440px;;
+    max-width: 1280px;
     margin: 0 auto;
     display: flex;
     align-items: center;
