--- a/src/styles/components/NavBar.module.css
+++ b/src/styles/components/NavBar.module.css
@@ -7,7 +7,8 @@
 }
 .containerNavBar {
     position: relative;
-    max-width: 1440px;
+    width: 1280px;
+    margin: 0 auto;
 }
 .navBar img {
     position: absolute;
