--- a/src/styles/components/OQueSaoMilhas.module.css
+++ b/src/styles/components/OQueSaoMilhas.module.css
@@ -1,14 +1,16 @@
 .OQueSaoMilhas {
     width: 100%;
     height: 700px;
+    margin: 0 auto;
+    background: var(--secundary-color) url("../../../public/img/LinhaAviao.png") no-repeat;
+    background-size: 95% 110%;
     
 }
 
 .OQueSaoMilhasContainer {
-    max-width: 1440px;
+    max-width: 1280px;
     height: 700px;
     margin: 0 auto;
-    background: var(--secundary-color) url("../../../public/img/LinhaAviao.png") no-repeat;
 }
 
 .textOQueSaoMilhas {
@@ -41,36 +43,36 @@
 }
 
 .videoConteiner {
-    width: 1100px;
-    margin: 40px auto 30px;
+    width: 1110px;
+    margin: 30px auto;
     display: flex;
+    justify-content: space-between;
 
 }
 
 .buttonContainer {
     width: 206px;
+    height: 55px;
     margin: 0 auto;
     
 }
 
 .buttonContainer button{
+    height: 55px;
+    width: 100%;
+
     font-family: 'Nunito', Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 20px;
     line-height: 27px;
-    display: flex;
-    align-items: center;
-    text-align: center;
     letter-spacing: -0.41px;
-
-    padding: 15px 15px;
     
     border: none;
     border-radius: 4px;
     background-color: var(--primary-color);
 
-    margin-top: 40px;
+    margin-bottom: 40px;
 
     color: var(--white);
 }
